# LangAi

./: .cursorignore  .cursorindexingignore  .cursorrules  .env.search_providers  .gitignore  .pre-commit-config.yaml  ANALYSIS_INDEX.md  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  KEY_FILES_REFERENCE.md  LANGGRAPH_STUDIO_GUIDE.md  MVP_ROADMAP.md  Makefile  QUICKSTART.md  QUICK_START.md  README.md  README.simple.md  README_ANALYSIS.md  SETUP_COMPLETE.md  WORKFLOW_ANALYSIS.md  env.example  langgraph.json  patch_extraction.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  root_cleanup_log.txt  run_customer_intelligence_research.py  run_paraguay_telecom_research.py  run_paraguay_telecom_research_v3.py  run_personal_intelligent_gaps.py  run_personal_paraguay_comprehensive.py  run_research.py  run_telecom_with_env.py  run_tigo_targeted_research.py  start-langflow.bat  start_langflow.py  start_langgraph_studio.bat  (+3 more)
.agent-todos/: README.md
.agent-todos/phase-0/: 01-setup-environment.md  02-api-integration.md  03-hello-research.md  04-validation.md  README.md
.agent-todos/phase-1/: README.md
.agent-todos/phase-2/: README.md
.agent-todos/phase-3/: README.md
.archive/planning/: DOCUMENTATION_REVIEW.md  DOCUMENTATION_TODO.md  IMPLEMENTATION_PLAN.md  START_HERE.md
.archive/reports/: docs_cleanup_log.txt  import_validation_output.txt  import_validation_report.txt  obsolete_docs_report.txt  obsolete_files_report.txt  quick_cleanup_report.txt
.claude/: settings.local.json
.claude/commands/: ci-guard.md  cm.md  cp.md  pr.md  review.md  run-release.md  rv.md  sc.md  security-scan.md  sync-branch.md
.claude/hooks/: auto_changelog.py  context_bloat_detector.py  cost_alert_threshold.py  pre_compact.py  pre_tool_use.py  session_start.py  stop.py  subagent_stop.py  user_prompt_submit.py
.claude/mcp/: README.md  document-analyzer.json  playwright-server.json
.cursor/: COMPLETION_ANALYSIS.md  IMPLEMENTATION_CHECKLIST.md  MCP_SETUP.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  USAGE_GUIDE.md  cli.json  mcp.template.json
.cursor/prompts/: README.md
.cursor/rules/: CRITICAL-YAML-FORMAT-ISSUES.md  CROSS-DOMAIN-INVOCATION-VALIDATION.md  comment-usage.mdc  development-best-practices.mdc  development-commit-message.mdc  drill-sargeant.mdc  readme-structure-rule.mdc  rule-index.yml
.cursor/scripts/: analyze-prompt-library.ps1  fix-extracted-prompts.ps1  validate-prompt-collections.py  validate-yaml.ps1  validate-yaml.py
.github/workflows/: ci-cd.yml  cursor-config.yml  test-quality-suite.yml
.serena/: project.yml
.specstory/history/: 2025-12-05_15-48Z-cursor-agent-configuration-completion.md  2025-12-15_22-26Z-cursor-analysis-and-project-documentation.md  2025-12-16_01-23Z-conversation-continuation.md  2025-12-16_01-55Z-project-analysis-and-recommendations.md
External repos/: EXTRACTION-CHECKLIST.md  EXTRACTION-GUIDE.md  README.md  REPOSITORY-ANALYSIS-OVERVIEW.md
External repos/detailed-analysis/: agent-wiz.md  agentcloud.md  agentops.md  awesome-multi-agent-papers.md  crewai-reference.md  langchain-reference.md  oreilly-ai-agents.md
External repos/langchain-reference/: DOWNLOADED_REPOS.md  README.md
deploy/: Dockerfile  docker-compose.yml
deploy/kubernetes/: deployment.yaml
docs/: AGENT_DEVELOPMENT_GUIDE.md  ARCHITECTURE.md  BATCH_RESEARCH_IMPLEMENTATION.md  CACHING_INTEGRATION_STATUS.md  CLEANUP_RECOMMENDATIONS.md  CODEBASE_IMPROVEMENT_ROADMAP.md  COMPREHENSIVE_PATTERNS_LIST.md  CORRECTED_FINDINGS.md  DATA_THRESHOLD_COMPARISON.md  DOCUMENTATION_ANALYSIS_AND_NEXT_STEPS.md  DUPLICATE_CLEANUP_FINAL_SUMMARY.md  DUPLICATE_CLEANUP_SESSION_2_SUMMARY.md  DUPLICATE_CLEANUP_SESSION_3_SUMMARY.md  DUPLICATE_CONSOLIDATION_LOG.md  DUPLICATE_FILES_ANALYSIS.md  DUPLICATE_FILES_CLEANUP_SUMMARY.md  FINAL_DUPLICATE_SUMMARY.md  METRICS_VALIDATOR_COMPARISON.md  MULTILINGUAL_CONSOLIDATION_COMPLETE.md  MULTILINGUAL_CONSOLIDATION_PLAN.md  MULTILINGUAL_SEARCH_COMPARISON.md  QUALITY_ENFORCER_ANALYSIS.md  QUALITY_INTEGRATION.md  QUALITY_INTEGRATION_QUICKSTART.md  QUALITY_INTEGRATION_VERIFICATION.md  README.md  REFACTORING_ANALYSIS.md  REFACTORING_TRACKER.md  ROADMAP_CLEANUP_SUMMARY.md  ROADMAP_REVIEW.md  SESSION_SUMMARY.md  SESSION_SUMMARY_DOCUMENTATION_CLEANUP.md  STYLE_GUIDE.md  fastapi-integration.md  index.md
docs/01-overview/: CODEBASE_TOUR.md  INSTALLATION.md  QUICKSTART.md  README.md
docs/02-architecture/: AGENT_PATTERNS.md  DATA_FLOW.md  LANGGRAPH.md  README.md  STATE_MANAGEMENT.md  SYSTEM_DESIGN.md
docs/03-agents/: AGENTS_CATALOG.md  AGENT_CONTRACTS.md  README.md
docs/04-workflows/: LANGGRAPH_STUDIO_GUIDE.md  README.md  (+2 more)
examples/: basic_research.py  basic_researcher_cli.py  batch_research.py  cost_analysis.py  custom_agent.py  hello_research.py
research-workflow-system/: .env.example  QUICKSTART.md  README.md  langgraph.json  pyproject.toml  requirements.txt
research-workflow-system/src/: __init__.py  main.py
research-workflow-system/src/files/: __init__.py
research-workflow-system/src/knowledge/: __init__.py
research-workflow-system/src/memory/: __init__.py
research-workflow-system/src/quality/: __init__.py
research-workflow-system/src/research_agent/: __init__.py  graph.py
research-workflow-system/src/specialized_agents/: __init__.py
research_targets/: README.md  tesla_quick.yaml
research_targets_CompleteMarket/: README.md
scripts/: __init__.py  analyze_obsolete_files.py  analyze_root_cleanup.py  batch_research.py  clean_root_directory.py  coverage_analyzer.py  dev  env_update.txt  find_obsolete_docs.py  fix_agent_imports.py  fix_getenv_patterns.py  fix_patterns.py  fix_patterns_v2.py  generate_conglomerate_profiles.py  move_obsolete_docs.py  quick_cleanup_scan.py  run_tests.ps1  setup.sh  test_scraping_integrations.py  validate_imports.py
src/: __init__.py  basic_researcher.py
templates/: comprehensive_telecom_report_template.md
tests/: conftest.py  test_cache_standalone.py  test_competitive_matrix.py  test_enhanced_workflow_integration.py  test_investment_thesis.py  test_quality_modules.py  test_risk_quantifier.py
(+2286 files in other folders)
